Comentarios en código para entender mejor

--- a/Other notebooks/Grover Minimum Upgrade.ipynb
+++ b/Other notebooks/Grover Minimum Upgrade.ipynb
@@ -26,90 +26,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from qiskit import QuantumCircuit\n",
-    "from qiskit_aer import AerSimulator\n",
-    "from qiskit.circuit.library import grover_operator \n",
-    "\n",
-    "import random"
+    "# Importamos las librerías necesarias\n",
+    "import numpy as np  # Para operaciones numéricas y manejo de arreglos\n",
+    "from qiskit import QuantumCircuit  # Para crear circuitos cuánticos\n",
+    "from qiskit_aer import AerSimulator  # Simulador cuántico de Qiskit Aer\n",
+    "from qiskit.circuit.library import grover_operator  # Operador de Grover (nota: debería ser GroverOperator en versiones recientes)\n",
+    "import random  # Para operaciones aleatorias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# numbers = unsorted array of numbers\n",
     "def find_min(numbers, iterations):\n",
-    "    n_items = len(numbers)\n",
-    "    threshold = numbers[random.randint(0, n_items-1)] # Choosing a random threshold value\n",
-    "    candidate_indices = [i for i in range(n_items) if numbers[i] <= threshold] # Marking elements of numbers that are <= threshold\n",
-    "    for _ in range(iterations):\n",
-    "        new_threshold = numbers[grover_search(candidate_indices, n_items)] # Grover search to find element smaller than current threshold\n",
-    "        if new_threshold < threshold:\n",
+    "    n_items = len(numbers)  # Número de elementos en el arreglo\n",
+    "    threshold = numbers[random.randint(0, n_items-1)]  # Elegimos un valor umbral aleatorio del arreglo\n",
+    "    candidate_indices = [i for i in range(n_items) if numbers[i] <= threshold]  # Indices de elementos menores o iguales al umbral\n",
+    "    for _ in range(iterations):  # Iteramos la cantidad de veces indicada\n",
+    "        new_threshold = numbers[grover_search(candidate_indices, n_items)]  # Buscamos un nuevo valor menor usando Grover\n",
+    "        if new_threshold < threshold:  # Si encontramos un valor menor, actualizamos el umbral\n",
     "            threshold = new_threshold\n",
-    "            candidate_indices = [idx for idx in candidate_indices if numbers[idx] <= threshold]\n",
-    "    return threshold\n",
+    "            candidate_indices = [idx for idx in candidate_indices if numbers[idx] <= threshold]  # Actualizamos los candidatos\n",
+    "    return threshold  # Retornamos el valor mínimo encontrado\n",
     "\n",
     "def grover_search(candidate_indices, n_items):\n",
-    "    n_qubits = int(np.ceil(np.log2(n_items)))\n",
-    "    oracle = np.identity(2**n_qubits)\n",
+    "    n_qubits = int(np.ceil(np.log2(n_items)))  # Calculamos el número de qubits necesarios\n",
+    "    oracle = np.identity(2**n_qubits)  # Creamos una matriz identidad para el oráculo\n",
     "    for idx in candidate_indices:\n",
-    "        oracle[idx, idx] = -1 # Building oracle\n",
-    "    oracle_circuit = QuantumCircuit(n_qubits)\n",
-    "    oracle_circuit.unitary(oracle, range(n_qubits))\n",
-    "    grover_op = grover_operator(oracle_circuit, insert_barriers=True)\n",
-    "    grover_circuit = QuantumCircuit(n_qubits, n_qubits)\n",
-    "    grover_circuit.h(range(n_qubits)) # Initializing equal superposition\n",
-    "    n_grover_iterations = int(np.sqrt(n_items))\n",
+    "        oracle[idx, idx] = -1  # Marcamos los índices candidatos con -1 (fase)\n",
+    "    oracle_circuit = QuantumCircuit(n_qubits)  # Creamos el circuito oráculo\n",
+    "    oracle_circuit.unitary(oracle, range(n_qubits))  # Insertamos la matriz oráculo como una compuerta unitaria\n",
+    "    grover_op = grover_operator(oracle_circuit, insert_barriers=True)  # Creamos el operador de Grover\n",
+    "    grover_circuit = QuantumCircuit(n_qubits, n_qubits)  # Creamos el circuito de Grover\n",
+    "    grover_circuit.h(range(n_qubits))  # Inicializamos en superposición\n",
+    "    n_grover_iterations = int(np.sqrt(n_items))  # Número de iteraciones de Grover\n",
     "    for _ in range(n_grover_iterations):\n",
-    "        grover_circuit = grover_circuit.compose(grover_op)\n",
-    "    grover_circuit.measure(range(n_qubits), range(n_qubits))\n",
-    "    simulator = AerSimulator()\n",
-    "    job = simulator.run(grover_circuit)\n",
-    "    result = job.result()\n",
-    "    counts = result.get_counts()\n",
-    "    measured = max(counts, key=counts.get)\n",
-    "    return int(measured, 2)"
+    "        grover_circuit = grover_circuit.compose(grover_op)  # Aplicamos el operador de Grover\n",
+    "    grover_circuit.measure(range(n_qubits), range(n_qubits))  # Medimos los qubits\n",
+    "    simulator = AerSimulator()  # Instanciamos el simulador cuántico\n",
+    "    job = simulator.run(grover_circuit)  # Ejecutamos el circuito en el simulador\n",
+    "    result = job.result()  # Obtenemos los resultados\n",
+    "    counts = result.get_counts()  # Obtenemos los conteos de medición\n",
+    "    measured = max(counts, key=counts.get)  # Seleccionamos el resultado más frecuente\n",
+    "    return int(measured, 2)  # Convertimos el resultado binario a entero"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11, 10, 10, 7, 8, 13, 4, 12, 5, 3, 14, 15, 9, 6, 2, 1]\n"
+      "[4, 9, 15, 7, 1, 10, 14, 11, 13, 2, 5, 3, 19, 6, 8, 12]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "12"
+       "1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Creamos un arreglo de números del 0 al 15\n",
+    "desordenados = list(range(16))\n",
+    "desordenados.reverse()  # Invertimos el arreglo\n",
+    "# Eliminamos el cero para evitar el caso trivial\n",
+    "desordenados.remove(0)\n",
+    "# Agregamos el número 19 para asegurar que el arreglo no esté vacío\n",
+    "desordenados.append(19)\n",
+    "# Mezclamos aleatoriamente el arreglo\n",
+    "random.shuffle(desordenados)\n",
+    "print(desordenados)  # Mostramos el arreglo desordenado\n",
+    "# Buscamos el valor mínimo usando el algoritmo de Grover\n",
+    "find_min(desordenados, 64)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resumen adicional\n",
     "\n",
-    "unsorted_numbers = list(range(16))\n",
-    "unsorted_numbers.reverse()\n",
-    "unsorted_numbers.remove(0)  # Remove zero to avoid trivial case\n",
-    "unsorted_numbers.append(10)  # Append a number to ensure the list is not empty\n",
-    "random.shuffle(unsorted_numbers)  # Shuffle the list to create an unsorted array\n",
-    "print(unsorted_numbers)\n",
-    "find_min(unsorted_numbers, 64)"
+    "Este cuaderno implementa el algoritmo de Grover para encontrar el valor mínimo en un arreglo no ordenado. El proceso consiste en:\n",
+    "\n",
+    "- Inicializar un umbral aleatorio y seleccionar los candidatos menores o iguales a ese umbral.\n",
+    "- Usar el algoritmo de Grover para buscar un índice de un valor menor dentro de los candidatos.\n",
+    "- Si se encuentra un valor menor, se actualiza el umbral y se repite el proceso.\n",
+    "- Finalmente, se retorna el valor mínimo encontrado tras varias iteraciones.\n",
+    "\n",
+    "El uso de Grover permite reducir el número de búsquedas necesarias respecto a un algoritmo clásico, aprovechando la computación cuántica para acelerar la búsqueda en arreglos no ordenados."
    ]
   }
  ],
