--- a/Other notebooks/Grover Minimum.ipynb
+++ b/Other notebooks/Grover Minimum.ipynb
@@ -120,7 +120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qiskit",
+   "display_name": "quantum",
    "language": "python",
    "name": "python3"
   },
@@ -134,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
