--- a/Other notebooks/Grover Minimum Upgrade.ipynb
+++ b/Other notebooks/Grover Minimum Upgrade.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Algoritmo de Grover para Encontrar el Valor Mínimo en un Arreglo No Ordenado\n",
-    "\n",
-    "Este código es un Jupyter Notebook que implementa el algoritmo de Grover para buscar en un arreglo no ordenado de números.\n",
+    "# Grover Minimum: Algoritmo cuántico de búsqueda de mínimo de Dürr y Høyer implementado usando Qiskit\n",
+    "El presente código es un Jupyter Notebook que implementa el algoritmo de Grover para buscar un valor mínimo en un arreglo no ordenado de números basándose en el trabajo de Durr y Hoyer, usando el paquete Qiskit de IBM. Es una adaptación actualizada del código original de Gurleen Pannu.\n",
     "\n",
     "1. La primera celda importa las librerías necesarias, incluyendo NumPy y Qiskit.\n",
     "2. La segunda celda define dos funciones: `find_min` y `grover_search`. La función `find_min` utiliza la función `grover_search` para encontrar el valor mínimo en un arreglo no ordenado. La función `grover_search` implementa el algoritmo de Grover, que es un algoritmo cuántico para buscar en un arreglo no ordenado.\n",
@@ -16,12 +15,13 @@
     "\n",
     "En este código, la función `grover_search` utiliza la implementación del algoritmo de Grover de Qiskit para encontrar el índice del valor mínimo en el arreglo. La función primero crea un circuito oráculo que marca los índices de los elementos en el arreglo que son menores o iguales a un umbral dado. Luego aplica el operador de Grover a este circuito oráculo, lo que amplifica la probabilidad de encontrar el valor mínimo. Finalmente, mide la salida del circuito cuántico y devuelve el índice del valor mínimo.\n",
     "\n",
-    "En resumen, este código demuestra cómo implementar el algoritmo de Grover usando Qiskit y Python.\n",
-    "\n",
     "## Versiones usadas en este cuaderno\n",
     " - Python 3.12.1\n",
     " - qiskit 2.1.0\n",
-    " - qiskit-aer 0.17.1"
+    " - qiskit-aer 0.17.1\n",
+    " \n",
+    "## Fuentes\n",
+    "https://github.com/Gurleenp/Quantum-Algorithms?utm_source=chatgpt.com"
    ]
   },
   {
