--- a/Other notebooks/Grover Minimum Upgrade.ipynb
+++ b/Other notebooks/Grover Minimum Upgrade.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "quantum",
+   "display_name": "quantum25",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
