--- a/Other notebooks/Grover Minimum.ipynb
+++ b/Other notebooks/Grover Minimum.ipynb
@@ -20,8 +20,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Versiones usadas en este cuaderno\n",
+    "- Python: 3.9.7 o superior (3.10.4 en entorno local)\n",
+    "- Quiskit 0.32 o superior (0.38.0 en entorno local)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,55 +76,103 @@
     "    grover_circuit.decompose().draw()\n",
     "    job = execute(grover_circuit, backend)\n",
     "    result = int(list(job.result().get_counts().keys())[0], 2)\n",
+    "    print(\"job:\", job.result().get_counts())\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12, 2, 3, 6, 5, 4, 10, 1, 15, 13, 11, 8, 9, 14, 10, 7]\n"
+      "[32, 29, 27, 23, 22, 21, 24, 31, 28, 35, 25, 20, 30, 33, 26, 34]\n",
+      "job: {'0001': 64, '1010': 67, '1110': 90, '0000': 93, '1000': 68, '0100': 62, '1111': 67, '0110': 74, '0011': 85, '0010': 71, '0111': 71, '1101': 65, '1100': 67, '1001': 64, '1011': 8, '0101': 8}\n",
+      "job: {'1100': 66, '1101': 75, '0100': 81, '0010': 73, '0111': 91, '1010': 73, '1001': 83, '1000': 67, '1111': 70, '0101': 7, '0000': 65, '0110': 66, '0011': 72, '0001': 66, '1110': 61, '1011': 8}\n",
+      "job: {'0011': 67, '1100': 77, '0000': 65, '1110': 74, '1101': 92, '1001': 73, '1010': 68, '0111': 69, '0010': 75, '0001': 75, '0100': 83, '1000': 54, '1111': 84, '0110': 50, '0101': 11, '1011': 7}\n",
+      "job: {'0011': 67, '1000': 73, '0000': 70, '1101': 73, '0100': 75, '1111': 75, '1110': 75, '1010': 60, '0010': 76, '0111': 80, '1001': 63, '0001': 71, '0110': 73, '1100': 87, '1011': 5, '0101': 1}\n",
+      "job: {'1001': 76, '0001': 67, '0000': 64, '1000': 79, '1011': 6, '0100': 78, '0110': 67, '1110': 80, '1100': 56, '1111': 75, '0010': 83, '1010': 84, '0111': 58, '0011': 71, '1101': 75, '0101': 5}\n",
+      "job: {'0000': 73, '0010': 81, '1111': 84, '0110': 76, '0100': 70, '1110': 68, '1001': 65, '0111': 51, '0001': 72, '0011': 62, '1000': 70, '1101': 69, '1010': 90, '1100': 77, '1011': 4, '0101': 12}\n",
+      "job: {'0100': 67, '0010': 80, '0000': 80, '1000': 66, '0110': 68, '0001': 68, '0011': 77, '1110': 67, '1100': 81, '1010': 90, '1111': 64, '1101': 75, '1001': 64, '0111': 66, '0101': 8, '1011': 3}\n",
+      "job: {'1100': 64, '0011': 66, '0101': 8, '1010': 83, '0001': 56, '1000': 71, '0000': 61, '0110': 75, '1001': 69, '0100': 81, '0111': 81, '1110': 67, '1111': 78, '1101': 78, '1011': 8, '0010': 78}\n",
+      "job: {'0100': 74, '1010': 73, '1110': 75, '0010': 66, '1111': 72, '0110': 77, '1000': 61, '0011': 84, '1001': 66, '1101': 72, '1100': 84, '0001': 73, '0111': 63, '0000': 72, '0101': 7, '1011': 5}\n",
+      "job: {'1000': 83, '1011': 13, '0010': 72, '1010': 77, '0001': 78, '0011': 64, '1111': 66, '1101': 69, '0000': 62, '0111': 72, '1110': 71, '0110': 68, '1001': 68, '0100': 74, '1100': 81, '0101': 6}\n",
+      "job: {'0011': 68, '1100': 83, '1001': 73, '0001': 75, '0111': 66, '1111': 73, '0110': 74, '0100': 73, '0010': 66, '0000': 63, '1110': 76, '1010': 70, '1101': 75, '1000': 73, '0101': 12, '1011': 4}\n",
+      "job: {'1000': 77, '1100': 70, '0011': 66, '1010': 70, '0001': 61, '1101': 86, '0010': 78, '0111': 85, '0100': 71, '0110': 79, '1110': 76, '0000': 54, '1001': 64, '1111': 78, '0101': 6, '1011': 3}\n",
+      "job: {'1100': 69, '0011': 67, '0100': 62, '0001': 81, '0010': 66, '1110': 61, '0111': 65, '0110': 87, '1101': 81, '1010': 73, '0000': 69, '1000': 91, '1001': 81, '1011': 12, '1111': 55, '0101': 4}\n",
+      "job: {'0011': 78, '1100': 76, '0000': 84, '0100': 83, '1101': 75, '0110': 61, '0001': 85, '1010': 74, '1000': 55, '1011': 6, '0111': 67, '1001': 64, '1110': 73, '0010': 73, '1111': 67, '0101': 3}\n",
+      "job: {'1101': 77, '0100': 64, '0001': 76, '1010': 73, '1011': 3, '0010': 67, '1100': 71, '0000': 81, '1111': 79, '1110': 78, '1000': 72, '0111': 69, '1001': 65, '0011': 71, '0101': 9, '0110': 69}\n",
+      "job: {'1000': 92, '1111': 74, '0110': 61, '0011': 79, '1100': 67, '1010': 64, '0001': 73, '1101': 68, '0111': 76, '0010': 70, '0100': 75, '1001': 85, '0000': 70, '1110': 57, '0101': 6, '1011': 7}\n",
+      "job: {'0111': 65, '1100': 65, '0011': 81, '0100': 68, '1101': 67, '1110': 60, '1000': 73, '0001': 73, '1111': 95, '0000': 69, '1011': 7, '0101': 4, '1010': 83, '0010': 66, '1001': 68, '0110': 80}\n",
+      "job: {'1110': 50, '0110': 76, '0001': 64, '1010': 73, '1101': 69, '0100': 95, '1000': 77, '1100': 81, '0011': 73, '0111': 67, '1111': 78, '0010': 75, '1011': 9, '1001': 66, '0000': 67, '0101': 4}\n",
+      "job: {'0100': 77, '1000': 76, '1010': 85, '0110': 76, '1111': 59, '0010': 74, '0111': 74, '0011': 72, '1110': 93, '1100': 61, '1001': 71, '0101': 7, '0000': 69, '1101': 54, '0001': 67, '1011': 9}\n",
+      "job: {'0111': 63, '1000': 70, '0000': 70, '0001': 65, '0100': 78, '1111': 70, '1110': 80, '0010': 80, '1010': 76, '1001': 77, '0110': 68, '0011': 76, '1100': 75, '1101': 64, '1011': 7, '0101': 5}\n",
+      "job: {'1010': 69, '0100': 78, '1101': 81, '0010': 73, '1110': 61, '0000': 63, '1111': 89, '0011': 62, '1000': 72, '1001': 83, '0111': 65, '1011': 5, '1100': 78, '0110': 53, '0001': 79, '0101': 13}\n",
+      "job: {'0000': 78, '1000': 76, '1101': 62, '0100': 80, '1001': 73, '0111': 75, '0010': 76, '1110': 67, '1111': 73, '0110': 66, '1010': 69, '0001': 76, '0011': 86, '1100': 61, '0101': 3, '1011': 3}\n",
+      "job: {'1101': 85, '0100': 75, '0011': 61, '1100': 78, '0001': 69, '1110': 76, '0010': 66, '1000': 68, '1001': 86, '1111': 84, '0110': 57, '0000': 78, '1010': 56, '0111': 77, '1011': 4, '0101': 4}\n",
+      "job: {'1001': 84, '0001': 72, '1010': 78, '1110': 64, '0100': 76, '1101': 55, '0110': 69, '0111': 72, '1000': 74, '0010': 72, '0011': 76, '1111': 68, '1100': 73, '0000': 76, '1011': 5, '0101': 10}\n",
+      "job: {'0011': 81, '1100': 77, '0000': 64, '1000': 91, '0111': 57, '1111': 61, '0010': 60, '0100': 61, '1001': 70, '1011': 10, '1110': 81, '1101': 66, '0001': 83, '0110': 86, '1010': 66, '0101': 10}\n",
+      "job: {'1001': 85, '1010': 73, '0001': 64, '0100': 65, '1000': 73, '0011': 68, '1110': 65, '0111': 74, '1100': 64, '0000': 78, '0010': 85, '1111': 73, '1101': 76, '0110': 66, '0101': 9, '1011': 6}\n",
+      "job: {'0100': 84, '1101': 70, '0011': 58, '1100': 78, '0111': 76, '1001': 65, '0000': 77, '1110': 71, '0110': 67, '1010': 71, '1000': 67, '0001': 67, '0010': 89, '1111': 76, '0101': 3, '1011': 5}\n",
+      "job: {'1110': 86, '0111': 67, '0010': 81, '1111': 74, '0100': 81, '1101': 71, '0001': 76, '1000': 78, '0011': 61, '1100': 78, '0000': 66, '1001': 67, '1010': 59, '0110': 67, '1011': 6, '0101': 6}\n",
+      "job: {'0010': 68, '0000': 86, '0011': 73, '1100': 70, '1111': 63, '1010': 65, '0001': 99, '1101': 68, '1000': 62, '1110': 59, '1011': 5, '0110': 75, '1001': 57, '0111': 81, '0100': 83, '0101': 10}\n",
+      "job: {'0001': 77, '1010': 70, '0011': 72, '1110': 65, '1000': 59, '1101': 76, '1111': 74, '0010': 84, '0111': 78, '1100': 67, '0100': 78, '0101': 3, '0000': 71, '1001': 77, '0110': 64, '1011': 9}\n",
+      "job: {'1110': 70, '1000': 77, '0000': 73, '1001': 81, '0001': 70, '0010': 76, '0100': 75, '1100': 61, '1101': 69, '1111': 81, '0111': 68, '0110': 67, '1010': 62, '0011': 84, '1011': 6, '0101': 4}\n",
+      "job: {'1000': 85, '0001': 79, '1010': 85, '0010': 64, '0110': 77, '1111': 72, '1110': 60, '1101': 65, '1001': 72, '0011': 75, '0111': 70, '0000': 59, '0100': 80, '0101': 7, '1100': 70, '1011': 4}\n",
+      "job: {'1110': 75, '0111': 67, '1111': 72, '1010': 61, '0001': 69, '1001': 73, '0010': 73, '1101': 78, '0000': 72, '0011': 78, '1100': 67, '0100': 85, '1000': 67, '0110': 73, '1011': 9, '0101': 5}\n",
+      "job: {'1000': 81, '1001': 65, '1010': 74, '0110': 62, '1111': 65, '0011': 85, '0010': 67, '1110': 84, '0111': 81, '1101': 74, '1011': 7, '0001': 66, '0000': 70, '0100': 75, '1100': 63, '0101': 5}\n",
+      "job: {'1111': 69, '1110': 69, '1100': 62, '0100': 88, '1101': 90, '0000': 66, '0010': 60, '1010': 72, '1001': 76, '0001': 57, '0011': 77, '0110': 87, '0111': 69, '1000': 68, '1011': 10, '0101': 4}\n",
+      "job: {'0011': 71, '0001': 67, '1010': 69, '1001': 67, '1110': 70, '0010': 71, '1101': 68, '0110': 74, '0111': 82, '1100': 62, '0000': 83, '1111': 71, '0100': 72, '0101': 10, '1000': 82, '1011': 5}\n",
+      "job: {'1001': 68, '1010': 86, '1110': 57, '0011': 71, '1111': 82, '0000': 74, '0111': 76, '0100': 75, '1000': 60, '0010': 92, '0001': 75, '0110': 67, '1011': 10, '1100': 61, '1101': 67, '0101': 3}\n",
+      "job: {'0100': 72, '1100': 81, '0011': 80, '1111': 88, '1010': 68, '1001': 62, '0001': 80, '0010': 61, '0111': 80, '1110': 68, '0110': 68, '1101': 60, '1000': 69, '0000': 76, '1011': 5, '0101': 6}\n",
+      "job: {'1100': 67, '1111': 71, '0110': 79, '0001': 72, '1001': 75, '1101': 65, '0010': 74, '0000': 68, '1000': 68, '0111': 69, '1110': 80, '1010': 72, '0011': 69, '1011': 9, '0100': 81, '0101': 5}\n",
+      "job: {'0010': 63, '1111': 62, '1010': 75, '1001': 81, '1000': 79, '1100': 67, '0111': 64, '1110': 69, '0100': 70, '0011': 81, '1101': 79, '0110': 81, '0001': 84, '0000': 60, '1011': 7, '0101': 2}\n",
+      "job: {'0001': 81, '1010': 57, '1001': 81, '1000': 68, '0000': 82, '0010': 65, '0110': 70, '0011': 72, '1111': 63, '0100': 69, '0111': 77, '1110': 85, '1100': 69, '1101': 76, '1011': 8, '0101': 1}\n",
+      "job: {'1110': 66, '0000': 71, '1000': 73, '0111': 67, '1001': 70, '1010': 69, '0011': 82, '1111': 75, '0110': 86, '0010': 67, '1100': 73, '0100': 79, '1101': 74, '0001': 58, '0101': 5, '1011': 9}\n",
+      "job: {'0110': 69, '1111': 78, '0010': 80, '0100': 79, '1100': 82, '0000': 54, '1000': 67, '1001': 76, '0001': 76, '1101': 69, '1010': 65, '1110': 67, '0111': 68, '0011': 76, '1011': 8, '0101': 10}\n",
+      "job: {'0111': 72, '0100': 81, '0000': 76, '0011': 78, '1100': 72, '1010': 64, '1111': 90, '1110': 73, '1000': 75, '0001': 61, '1101': 62, '0110': 78, '1001': 74, '0010': 53, '1011': 9, '0101': 6}\n",
+      "job: {'1011': 7, '0010': 76, '1000': 67, '1001': 74, '1010': 68, '1111': 68, '1100': 84, '1101': 73, '0000': 72, '1110': 79, '0100': 65, '0111': 71, '0001': 68, '0011': 82, '0101': 4, '0110': 66}\n",
+      "job: {'1000': 29, '1011': 629, '1010': 36, '0001': 32, '1110': 18, '1100': 33, '0111': 26, '1101': 26, '0011': 36, '0110': 17, '0101': 37, '0010': 27, '1001': 21, '1111': 17, '0000': 15, '0100': 25}\n",
+      "job: {'1100': 29, '1011': 603, '1010': 25, '0001': 21, '1110': 30, '1000': 27, '0000': 32, '1111': 24, '0100': 27, '1101': 31, '0110': 41, '1001': 32, '0111': 27, '0101': 23, '0011': 27, '0010': 25}\n",
+      "job: {'0010': 25, '1011': 597, '1010': 23, '0110': 32, '0111': 27, '1110': 27, '0101': 32, '0000': 26, '0100': 29, '1111': 34, '1100': 40, '0011': 31, '0001': 18, '1101': 30, '1001': 26, '1000': 27}\n",
+      "job: {'1011': 572, '0010': 33, '1111': 35, '1110': 36, '0101': 36, '1100': 40, '0011': 24, '0000': 32, '1010': 27, '1000': 42, '0001': 23, '0110': 32, '0100': 20, '1101': 22, '0111': 17, '1001': 33}\n",
+      "job: {'0010': 33, '1011': 584, '0011': 34, '0100': 30, '0000': 30, '1000': 24, '0110': 22, '1010': 34, '0101': 26, '1111': 26, '0111': 36, '1110': 32, '1001': 28, '1100': 34, '1101': 30, '0001': 21}\n",
+      "job: {'1011': 595, '0010': 36, '1000': 35, '0111': 30, '1100': 31, '0011': 25, '1010': 24, '1111': 38, '1101': 24, '1110': 32, '0101': 29, '0100': 27, '0110': 19, '0001': 32, '1001': 22, '0000': 25}\n",
+      "job: {'1100': 26, '0011': 28, '0100': 33, '1101': 30, '1011': 598, '1111': 31, '0110': 30, '0111': 28, '0000': 34, '0101': 30, '1001': 26, '1010': 21, '0010': 23, '1110': 26, '1000': 35, '0001': 25}\n",
+      "job: {'0010': 34, '1011': 578, '1100': 34, '1001': 38, '0001': 30, '0101': 30, '0100': 29, '1101': 36, '0111': 27, '1010': 30, '0000': 25, '0110': 27, '1110': 22, '1111': 33, '1000': 31, '0011': 20}\n",
+      "job: {'0000': 23, '0010': 29, '1011': 580, '0101': 40, '1110': 31, '0011': 33, '1100': 34, '1010': 20, '0111': 26, '0100': 31, '1111': 39, '0110': 26, '1001': 32, '1000': 24, '1101': 35, '0001': 21}\n",
+      "job: {'1011': 605, '1001': 25, '0001': 37, '0101': 28, '1101': 38, '0000': 30, '0011': 24, '1111': 30, '0010': 23, '1110': 28, '1100': 23, '0100': 28, '1000': 27, '0111': 24, '0110': 29, '1010': 25}\n",
+      "job: {'1011': 578, '0010': 29, '0100': 29, '0001': 21, '1001': 38, '0011': 35, '1000': 26, '0000': 26, '1101': 30, '1110': 37, '1100': 28, '0101': 31, '1111': 38, '0111': 32, '0110': 25, '1010': 21}\n",
+      "job: {'1011': 592, '0000': 23, '0011': 28, '1100': 31, '1111': 34, '1010': 25, '1101': 36, '0101': 25, '1001': 36, '1000': 26, '0110': 24, '0100': 28, '0001': 37, '0111': 23, '0010': 26, '1110': 30}\n",
+      "job: {'1111': 38, '0110': 32, '1011': 575, '1110': 43, '0101': 28, '1101': 21, '1010': 30, '0011': 32, '1001': 26, '0001': 24, '0111': 30, '0010': 33, '1100': 21, '0000': 28, '0100': 29, '1000': 34}\n",
+      "job: {'0010': 33, '1011': 595, '1001': 30, '0001': 31, '0111': 29, '1100': 28, '0011': 38, '0000': 32, '0100': 26, '0101': 29, '1110': 32, '1000': 20, '1010': 19, '1111': 26, '0110': 28, '1101': 28}\n",
+      "job: {'1011': 568, '1100': 24, '0111': 31, '1111': 29, '0110': 23, '1101': 40, '0100': 33, '0000': 38, '0101': 29, '0011': 30, '0010': 35, '1000': 33, '0001': 29, '1110': 30, '1010': 27, '1001': 25}\n",
+      "job: {'1111': 31, '0110': 38, '0010': 39, '1011': 582, '0011': 27, '1100': 27, '0111': 36, '0101': 25, '1001': 22, '1110': 35, '0100': 34, '1010': 30, '1000': 29, '0001': 24, '1101': 25, '0000': 20}\n",
+      "job: {'1101': 30, '0100': 31, '1011': 585, '1111': 31, '1110': 33, '0001': 31, '1001': 32, '0011': 30, '0000': 29, '1010': 27, '0110': 18, '0101': 24, '1100': 23, '0111': 27, '1000': 40, '0010': 33}\n",
+      "job: {'1011': 590, '1110': 37, '0110': 20, '1000': 28, '0000': 27, '0001': 30, '1100': 34, '1101': 28, '0011': 32, '0111': 28, '0101': 24, '1010': 27, '0100': 30, '1001': 27, '0010': 28, '1111': 34}\n",
+      "job: {'1011': 584, '0000': 32, '1000': 30, '0101': 29, '1010': 29, '1001': 29, '1111': 29, '0110': 33, '0010': 31, '0011': 32, '0111': 30, '1100': 30, '0001': 18, '1101': 29, '0100': 31, '1110': 28}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2"
+       "20"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unsorted_numbers = list(range(16))\n",
-    "unsorted_numbers.reverse()\n",
-    "unsorted_numbers.remove(0)  # Remove zero to avoid trivial case\n",
-    "unsorted_numbers.append(10)  # Append a number to ensure the list is not empty\n",
+    "unsorted_numbers = [20, 21, 22,23,24,25,26,27,28,29,30,31,32,33,34,35]  # Example unsorted array of numbers\n",
     "random.shuffle(unsorted_numbers)  # Shuffle the list to create an unsorted array\n",
     "print(unsorted_numbers)\n",
     "find_min(unsorted_numbers, 64)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
