--- a/Other notebooks/discard/Grover Minimum.ipynb
+++ b/Other notebooks/discard/Grover Minimum.ipynb
@@ -177,7 +177,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "quantum",
+   "display_name": "qiskit",
    "language": "python",
    "name": "python3"
   },
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
