Experimentos con Gemini

--- a/Other notebooks/MindQuantum.ipynb
+++ b/Other notebooks/MindQuantum.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c96e36aa",
+   "metadata": {},
+   "source": [
+    "## Grover basado en MindQuantum"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "564973a7",
